<resources>
    <!-- Log In activity -->
    <string name="login_title">Log In</string>
    <string name="user">Username</string>
    <string name="passw">Password</string>
    //mapbox
    <string name="acces_token">pk.eyJ1IjoiZm91YWQ5OSIsImEiOiJjazhpY2Y0NXowMWFiM25tanhoYmg1dDRtIn0.Z_D1fDk9iTzxbHKlvKwqDw</string>
    <!-- Sign Up activities -->
    <string name="signup_title">Sign Up</string>
    <string name="e_mail">E-Mail</string>
    <string name="full_name">Full Name</string>
    <string name="repeat_psw">Repeat Password</string>
    <string name="terms"><u>Terms of Use &amp; Privacy Policy</u></string>
    <string name="birth">Your Step Goal</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>


    <!-- History activity -->
    <string name="history_title">History</string>
    <string name="today">Today</string>
    <string name="walked">You walked:</string>
    <string name="km">km</string>
    <string name="steps">You made:</string>
    <string name="step">steps</string>
    <string name="diet">Diet</string>
    <!-- Tracker Activity -->
    <string name="title">Tracker</string>

    <!-- Workout Home activity -->
    <string name="workout_home_title">Workout Plans</string>

    <!-- Plan preview activity -->
    <string name="start_text">Start</string>

    <!-- Current plan activity -->
    <string name="current_ex">Current Exercise</string>
    <string name="next_ex">Next Exercise</string>
    <string name="timer">Timer</string>
    <string name="pause">Start</string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>

    <!-- Create plan activity -->
    <string name="create_plan_title">Create Plan</string>
    <string name="plan_name_form">Plan name</string>
    <string name="objective_form">Objective</string>
    <string name="dxw">Days per week</string>
    <string name="skill_form">Skill</string>
    <string name="rookie">Rookie</string>
    <string name="pro">Pro</string>
    <string name="option1_obj">Lose Weight</string>
    <string name="option2_obj">Cardio/Tonify</string>
    <string name="option3_obj">Gain Strenght</string>
    <string name="option4_obj">Bulk</string>

    <!-- Diet home activity -->
    <string name="diet_title_home">Diets</string>
    <string name="diet_example_1">Diet 1</string>
    <string name="diet_example_2">Diet 2</string>

    <!-- Create Diet activity -->
    <string name="create_diet">Create Diet</string>
    <string name="name">Diet name</string>
    <string name="objective1">Hypertrophy Diet</string>
    <string name="objective2">Ketogenic Diet</string>
    <string name="vegan_veget">Are you Vegan or Vegetarian?</string>
    <string name="negation">No</string>
    <string name="vegan">Yes, I\'m vegan</string>
    <string name="veget">Yes, I\'m vegetarian</string>

    <!-- Diet view activity -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>

    <!-- Profile activity -->
    <string name="profile_title">Profile</string>
    <string name="personal_info_title">Personal information</string>
    <string name="personal_settings1">Update Weight</string>
    <string name="personal_settings2">Update Height</string>
    <string name="personal_settings_maxSteps">Update Step goal</string>
    <string name="dieta">Update Diet</string>
    <string name="dieta_normal">Normal Diet</string>
    <string name="dieta_veggie">Vegetarian Diet</string>
    <string name="dieta_vegan">Vegan Diet</string>
    <string name="settings_button">Settings</string>
    <string name="password">New Password</string>
    <string name="uppass">Update Password</string>
    <string name="save">Save</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="Appsettings_title">App Settings</string>
    <string name="setting3">Support</string>
    <string name="setting4">FAQ</string>
    <string name="setting5">Sign Out :(</string>
    <string name="setting6">Change Diet</string>

    <!-- Other strings -->
    <string name="app_name">HealthCared</string>
    <string name="profile_text">Settings</string>
    <string name="back_text">Back</string>
    <string name="home">Home</string>
    <string name="pauset">Pause 1h</string>

    <!-- Example strings -->
    <string name="plan_name_1">Plan 1</string>
    <string name="plan_name_2">Plan 2</string>
    <string name="exercise_name_1">Exercise 1</string>
    <string name="exercise_name_2">Exercise 2</string>
    <string name="exercise_name_3">Exercise 3</string>
    <string name="exercise_name_4">Exercise 4</string>
    <string name="repetitions">Repetitions: X</string>
    <string name="sets">Sets: Y</string>
    <string name="rest">Rest (sec): Z</string>
    <string name="title_activity_history">History</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
</resources>
