<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UI.CreateDiet">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar_workout"
        android:layout_height="@dimen/toolbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/abc_vector_test"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="goBack"
            android:contentDescription="@string/back_text"/>

        <TextView
            android:id="@+id/create_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/create_diet"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"/>

        <Space
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_workout"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="@dimen/new_margin"/>
        <EditText
            android:id="@+id/plan_name_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text"
            android:text="@string/name"
            android:background="@color/transparency_white"
            android:layout_marginTop="@dimen/new_margin"
            android:layout_marginBottom="@dimen/top_margin"
            android:inputType="text"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objective_form"
            android:textSize="@dimen/normal_text"
            android:layout_marginBottom="@dimen/new_margin"
            />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:filterTouchesWhenObscured="true"
            android:background="#00000000"
            app:columnCount="2"
            android:layout_marginBottom="@dimen/top_margin">
            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="match_parent"
                android:background="@color/transparency_white"
                android:text="@string/option1_obj"/>

            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="match_parent"
                android:background="@color/transparency_white"
                android:text="@string/option2_obj" />
            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="match_parent"
                android:background="@color/transparency_white"
                android:text="@string/objective1"/>
            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="match_parent"
                android:background="@color/transparency_white"
                android:text="@string/objective2"/>
        </androidx.gridlayout.widget.GridLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan_veget"
            android:textSize="@dimen/normal_text"
            android:layout_marginBottom="@dimen/new_margin"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                android:text="@string/negation"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/header_text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                android:text="@string/veget"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/header_text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                android:text="@string/vegan"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/header_text"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:paddingHorizontal="@dimen/side_margin"
        android:id="@+id/start"
        android:layout_height="wrap_content"
        android:background="@color/transparency_white"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/side_margin"
        android:text="@string/create_diet"
        android:textSize="@dimen/header_text"
        android:layout_centerHorizontal="true"
        android:onClick="addDiet"/>
</RelativeLayout>