<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UI.Singup1">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="@dimen/toolbar"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/sidex2"
        android:weightSum="5">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/abc_vector_test"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="goBack"
            android:contentDescription="@string/back_text"/>


        <TextView
            android:id="@+id/workout_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/signup_title"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/side_margin2"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textbox_height"
            android:background="@color/transparency_white"
            android:hint="@string/e_mail"
            android:paddingHorizontal="@dimen/new_margin"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin2"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textbox_height"
            android:layout_marginBottom="@dimen/margin2"
            android:background="@color/transparency_white"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/new_margin"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textbox_height"
            android:layout_marginBottom="@dimen/margin2"
            android:background="@color/transparency_white"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/new_margin"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textbox_height"
            android:hint="@string/passw"
            android:background="@color/transparency_white"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/new_margin"
            android:layout_marginBottom="@dimen/margin2"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/password_repeat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textbox_height"
            android:hint="@string/repeat_psw"
            android:background="@color/transparency_white"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/new_margin"
            android:layout_marginBottom="@dimen/margin2"
            android:inputType="textPassword"/>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
            android:layout_marginBottom="@dimen/margin2"
            android:text="@string/terms"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparency_white"
            android:onClick="signup1"
            android:paddingHorizontal="@dimen/side_margin"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>


