<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar_workout"
        android:layout_height="@dimen/toolbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/back_text"
            android:onClick="goBack"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/create_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/profile_title"
            android:textSize="@dimen/header_text"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/header_text"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/common_google_signin_btn_icon_disabled"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/profile_text"
            android:onClick="changeProfileImage"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_workout"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/personal_info_title"

            android:textSize="@dimen/normal_text" />

        <Button
            android:id="@+id/button4"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorButtons"
            android:text="@string/personal_settings1" />

        <Button
            android:id="@+id/button5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorButtons"
            android:text="@string/personal_settings2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorButtons"
            android:padding="10dp"
            android:text="@string/settings_button" />

    </LinearLayout>




</RelativeLayout>