<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UI.CreatePlan">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar_workout"
        android:layout_height="@dimen/toolbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/abc_vector_test"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="goBack"
            android:contentDescription="@string/back_text"/>

        <TextView
            android:id="@+id/create_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/create_plan_title"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"/>

        <Space
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/start"
        android:layout_below="@id/toolbar_workout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_workout"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_name_form"
                android:textSize="@dimen/normal_text"
                android:layout_marginTop="@dimen/new_margin"/>
            <EditText
                android:id="@+id/plan_name_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/header_text"
                android:hint="@string/plan_name_form"
                android:layout_marginTop="@dimen/new_margin"
                android:layout_marginBottom="@dimen/top_margin"
                android:inputType="text"
                android:textColorHint="@color/colorWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objective_form"
                android:textSize="@dimen/normal_text"
                android:layout_marginBottom="@dimen/new_margin"/>
            <RadioGroup
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/top_margin">
                <RadioButton
                    android:id="@+id/raido1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/option1_obj"
                    android:textSize="@dimen/small_text"/>
                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/option2_obj"
                    android:textSize="@dimen/small_text"/>
                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/option3_obj"
                    android:textSize="@dimen/small_text"/>
                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/option4_obj"
                    android:textSize="@dimen/small_text"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dxw"
                android:textSize="@dimen/normal_text"
                android:layout_marginBottom="@dimen/new_margin"/>
            <Spinner
                android:id="@+id/spinner_days"
                android:layout_width="@dimen/button_size"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/top_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill_form"
                android:textSize="@dimen/normal_text"
                android:layout_marginBottom="@dimen/new_margin"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:max="2"
                    android:progress="0"
                    android:layout_marginTop="@dimen/new_margin"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rookie"
                    android:layout_alignLeft="@id/seekBar"
                    android:layout_below="@id/seekBar"
                    android:textSize="@dimen/header_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pro"
                    android:layout_alignRight="@id/seekBar"
                    android:layout_below="@id/seekBar"
                    android:textSize="@dimen/header_text"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:background="@drawable/button_shape"
        android:layout_width="wrap_content"
        android:paddingHorizontal="@dimen/side_margin"
        android:id="@+id/start"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/side_margin"
        android:text="@string/create_plan_title"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="@dimen/header_text"
        android:layout_centerHorizontal="true"
        android:onClick="addPlan"/>
</RelativeLayout>