<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Diet">



    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar_workout"
        android:layout_height="@dimen/toolbar"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/abc_vector_test"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="goBack"
            android:contentDescription="@string/back_text"/>

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/diet"
            android:textSize="@dimen/header_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_text"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"
            android:clickable="true"
            android:focusable="true"
            android:onClick="settings"/>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/header_text"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/profile_text"
            android:focusable="true"
            android:onClick="settings"
            app:srcCompat="@android:drawable/ic_menu_manage" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>